# yumpu-dl-rs

./: Cargo.toml  Cross.toml  LICENSE  README.md
.github/workflows/: publish.yml  rust-clippy.yml  rust.yml
yumpu-dl-cli/: Cargo.toml  README.md
yumpu-dl-cli/src/: main.rs
yumpu-dl-gui/: Cargo.toml  README.md
yumpu-dl-lib/: Cargo.toml  README.md
yumpu-dl-lib/src/: lib.rs
