[package]
name = "yumpu-dl-web"
version = "0.1.0"
edition = "2021"

authors = ["Kilian Krampf <kilian@mail.menkalian.de>"]
description = "GUI to download (freely available) documents from `yumpu.com` as pdf"
keywords = ["scraper", "yumpu"]
readme = "README.md"

license = "MIT"
repository = "https://github.com/menkalian/yumpu-dl-rs"

[dependencies]
