[package]
name = "yumpu-dl-lib"
version = "0.1.0"
edition = "2021"

authors = ["Kilian Krampf <kilian@mail.menkalian.de>"]
description = "Tool to generate rust code with hierarchical string constants from simple file formats"
keywords = ["generated", "dev-util"]
categories = ["development-tools", "development-tools::build-utils"]
readme = "README.md"

license = "MIT"
homepage = "https://github.com/menkalian/keystring-generator"
repository = "https://github.com/menkalian/keystring-generator"

[dependencies]
printpdf = { version = "0.5.2", features = ["embedded_images"] }
regex = "1.5.6"
reqwest = { version = "0.11.11", features = ["json", "default-tls"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"

[dev-dependencies]
tokio = { version = "1.19.2", features = ["macros"] }