[package]
name = "yumpu-dl-lib"
version = "0.1.0"
edition = "2021"

authors = ["Kilian Krampf <kilian@mail.menkalian.de>"]
description = "Library to download (freely available) documents from `yumpu.com` as pdf"
keywords = ["scraper", "yumpu"]
readme = "README.md"

license = "MIT"
repository = "https://github.com/menkalian/yumpu-dl-rs"

[dependencies]
printpdf = { version = "0.5.2", features = ["embedded_images"] }
regex = "1.5.6"
reqwest = { version = "0.11.11", features = ["json", "default-tls"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"

[dev-dependencies]
tokio = { version = "1.19.2", features = ["macros"] }